if install_xdg
    install_data('taisei-replay-viewer.desktop', 'taisei.desktop',
                 install_dir : join_paths(xdg_path, 'applications'))
    install_data('taisei.png',
                 install_dir : join_paths(xdg_path, 'icons/hicolor/128x128/apps'))
    install_data('taisei-replay.png',
                 install_dir : join_paths(xdg_path, 'icons/hicolor/256x256/mimetypes'))
    install_data('taisei.xml',
                 install_dir : join_paths(xdg_path, 'mime/packages'))
endif
