if install_xdg
    install_data('org.taisei_project.Taisei.tsr.desktop', 'org.taisei_project.Taisei.desktop',
                 install_dir : join_paths(xdg_path, 'applications'))
    install_data('org.taisei_project.Taisei.png', 'taisei.png',
                 install_dir : join_paths(xdg_path, 'icons/hicolor/128x128/apps'))
    install_data('org.taisei_project.Taisei.tsr.png', 'taisei-replay.png',
                 install_dir : join_paths(xdg_path, 'icons/hicolor/256x256/mimetypes'))
    install_data('org.taisei_project.Taisei.xml',
                 install_dir : join_paths(xdg_path, 'mime/packages'))
    install_data('org.taisei_project.Taisei.appdata.xml',
                 install_dir : join_paths(xdg_path, 'metainfo'))
endif
